# MoyuGuard

./: .gitignore  README.md
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/scripts/: moyuguard-hook.sh
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: auth.rs  config.rs  hook_installer.rs  hook_server.rs  interceptor.rs  lib.rs  log_store.rs  main.rs  mdns.rs  proto.rs  ws_server.rs
desktop/src/components/: AuthLog.tsx  Dashboard.tsx  Icons.tsx  Settings.tsx
docs/: protocol.md
mobile/: README.md  pubspec.yaml
mobile-web-sim/: index.html
mobile/android/app/: build.gradle.kts
mobile/ios/: MoyuGuardActivityAttributes.swift
mobile/ios/MoyuGuardShared/: Package.swift
mobile/ios/MoyuGuardWidget/: ApproveRejectIntents.swift  Info.plist  MoyuGuardWidget.swift  MoyuGuardWidgetBundle.swift  MoyuGuardWidgetControl.swift  MoyuGuardWidgetLiveActivity.swift
mobile/ios/Runner/: AppDelegate.swift  Info.plist  LiveActivityManager.swift  Runner.entitlements
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: auth_request.dart
mobile/lib/screens/: auth_screen.dart  home_screen.dart  pairing_screen.dart  scan_screen.dart
mobile/lib/services/: connection_service.dart  mdns_discovery.dart
mobile/lib/widgets/: auth_card.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
proto/: moyuguard.proto
(+8 files in other folders)
