[package]
name = "moyuguard-desktop"
version = "0.1.0"
description = "MoyuGuard Desktop - AI Tool Authorization Guardian"
authors = ["you"]
edition = "2021"

[lib]
name = "moyuguard_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
prost = "0.13"
mdns-sd = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
gethostname = "0.5"
dirs = "6"
libc = "0.2"
